# ETLProjectAPIExtract

./: .env-example  .gitignore  README.md  pyproject.toml
app/: dashboard.py  dashboard_model.py
exemples/: exemple_02.py  exemple_04.py
exemplos/: exemplo_01.py  exemplo_03.py
src/: main.py
src/client/: coinbase.py
src/repository/postgresql/: bitcoin_price.py  bitcoin_price_struct.py  db.py
src/repository/tinydb/: bitcoin_price.py
src/tools/: logger.py
