[tool.poetry]
name = "etlprojectapiextract"
version = "0.1.0"
description = ""
authors = ["Raul.SantosSilveira-ext <Raul.SantosSilveira-ext@ab-Inbev.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
